feat: added celery workers.

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 SQLALCHEMY_DATABASE_URL=postgresql://user:password@localhost:5432/products_db
+
+REDIS_URL=redis://localhost:6379/0
+
+BATCH_SIZE=1000
